<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/rucula_pizza" />



        <TextView
            android:id="@+id/pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="250dp"
            android:text="Pedido Pizzería"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06999999"
            android:textColor="@color/black"
           />


        <TextView
            android:id="@+id/textnum1"
            android:layout_width="700dp"
            android:layout_height="40dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="5dp"
            android:text="Introduce los ingredientes para la pizza"

            app:layout_constraintBottom_toTopOf="@+id/champiñones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pedido"
            tools:ignore="MissingConstraints"
            android:textColor="@color/black"
            />

        <CheckBox
            android:id="@+id/champiñones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champinones"
            android:layout_marginLeft="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textnum1"
            android:textColor="@color/black"></CheckBox>

        <CheckBox
            android:id="@+id/extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/extra_de_mozarella"
            android:layout_marginLeft="30dp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/champiñones"
            android:textColor="@color/black"></CheckBox>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pepino"
            android:layout_marginLeft="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extra"
            android:textColor="@color/black"></CheckBox>

        <CheckBox
            android:id="@+id/piña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pina"
            android:layout_marginStart="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textnum1"
            android:textColor="@color/black"></CheckBox>

        <CheckBox
            android:id="@+id/aceitunas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceitunas"
            android:layout_marginStart="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/piña"
            android:textColor="@color/black"></CheckBox>

        <CheckBox
            android:id="@+id/atun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atun"
            android:layout_marginStart="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aceitunas"
            android:textColor="@color/black"></CheckBox>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="366dp"
            android:layout_height="76dp"
            android:layout_marginStart="15dp"

            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"


            android:layout_marginBottom="341dp"

            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/atun"
            tools:ignore="MissingConstraints"
            android:textColor="@color/black">


            <RadioButton
                android:id="@+id/reparto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/reparto_a_domicilio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eleccion"
                android:textColor="@color/black"></RadioButton>

            <RadioButton
                android:id="@+id/recogida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/recogida_en_tienda"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/eleccion"
                tools:ignore="MissingConstraints"
                android:textColor="@color/black"></RadioButton>




        </RadioGroup>


        <Button
            android:id= "@+id/boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Validar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:textColor="@color/white"></Button>

        <Button
            android:id="@+id/limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="200dp"
            android:text="Limpiar selección"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:ignore="MissingConstraints"
            android:textColor="@color/white"></Button>


        <TextView
            android:id="@+id/ticket"
            android:layout_width="278dp"
            android:layout_height="131dp"

            android:layout_marginTop="64dp"


            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/limpiar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="94dp">


        </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>